[project]
name = "marimo-polars-ggsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "ggsql>=0.3.2",
    "ipython>=9.13.0",
    "marimo[edit,recommended]>=0.23.6",
    "polars>=1.40.1",
]

[tool.uv]
package = false
